@@ -2,6 +2,10 @@ Package: R.oo
 =============
 
 Version: 1.15.1 [2013-08-29]
+o Package now loads completely silent with
+  library(R.oo, warn.conflicts=FALSE, quietly=TRUE).
+o Now startupMessage() for Package uses new R.methodsS3::startupMessage()
+  which acknowledges argument 'quietly' of library()/require().
 o setConstructorS3() no longer requires that R.oo is attached ("loaded").
 
 
